[package]
name = "deltime"
version = "0.1.0"
edition = "2021"

[features]
default = ["window", "usb", "winusb"]
window = ["dep:winit"]
usb = ["dep:udev"]
winusb = ["dep:wmi"]

[dependencies]
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites", default-features = false, features = ["dates", "retry", "async-io"]}
scheduler = {git = "https://github.com/P40b0s/scheduler.git"}
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
indicatif= {version = "0.17.9", git = "https://github.com/console-rs/indicatif.git"}
usbenum="*"
#mountpoints="*"
thiserror="*"
tokio= {version = "1.41.1", features = ["macros", "rt", "rt-multi-thread", "bytes", "fs"] }
logger = {git = "https://github.com/P40b0s/logger.git"}
async-channel="2.3.1"
futures="0.3.31"
uuid = {version="1.13.1", features = ["v4"]}
#window
winit = {version = "0.30.9", optional = true }
#usb
[target.'cfg(target_os = "linux")'.dependencies]
udev = { version="0.9.3", optional = true, features=["mio10"]}
[target.'cfg(target_os = "windows")'.dependencies]
wmi = { version = "0.15.0", optional = true }







[dev-dependencies]
