[package]
name = "deltime"
version = "0.1.0"
edition = "2021"

[features]
default = ["window", "usb", "beeper"]
window = ["dep:winit"]
lin_usb = ["dep:udev"]
beeper = ["dep:actually_beep"]
win_usb = ["dep:wmi"]
usb = ["lin_usb", "win_usb"]

[dependencies]
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites", default-features = false, features = ["dates", "retry", "async-io"]}
scheduler = {git = "https://github.com/P40b0s/scheduler.git"}
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
indicatif= {version = "0.17.9", git = "https://github.com/console-rs/indicatif.git"}
thiserror="2.0.11"
tokio= {version = "1.43.0", features = ["macros", "rt", "fs"] }
logger = {git = "https://github.com/P40b0s/logger.git"}
futures="0.3.31"
blake3 = "1.5.5"
#window
winit = {version = "0.30.9", optional = true }
#beeper
actually_beep = {version = "0.1.1", optional = true}
#usb
[target.'cfg(target_os = "linux")'.dependencies]
udev = { version="0.9.3", optional = true, features=["mio10"]}
[target.'cfg(target_os = "windows")'.dependencies]
wmi = { version = "0.15.0", optional = true }








[dev-dependencies]
